--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
+  background-color: #242424;
 }
 
 .bg-dark-2 {
@@ -14,7 +15,7 @@ body {
 
 .profil {
   height: 200px;
-  margin: 20px 20px;
+  margin: 0px 20px 20px 20px;
   width: 100%;
   display: flex;
   border-radius: 4px;
